tests/error/comptime/check_slice_construction20.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to objects in this allocation, which was freed
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 1);
		__builtin_comptime_free(p);

		__builtin_slice_from_ptrs(p, p);
	});
}
